Wed Mar 28 11:34:54 2001  Frank Hunleth <fhunleth@cs.wustl.edu>

        * ace/CDR_Base.inl:
          Removed memset in ACE_CDR::mb_align when ACE_HAS_PURIFY ==
          1, since it was causing some TAO unit tests to break (in
          particular, the Portable_Interceptors/Service_Context_Manipulation
          test).  After running Cubit and a few other tests, Purify didn't
          notice any more uninitialized memory accesses.  Fixes bug #828.

Wed Mar 28 11:55:39 2001  Steve Huston  <shuston@riverace.com>

        * include/makeinclude/platform_aix_ibm.GNU: New file, replaces
          platform_aix_vacpp.GNU for Visual Age C++ 5. Also replaces
          use of platform_aix4_cset++.GNU for IBM C/C++ Compilers 3.6.6.
          So, for the supported, IBM-supplied compilers (IBM C/C++ 3.6.6
          and Visual Age C++ 5) use this file. If you want to try to keep
          using CSet++ 3.4 or earlier, you can keep using
          platform_aix4_cset++.GNU, but it's not tested any longer and
          will disappear at the next ACE version. If you want to use
          Visual Age C++ 4, you should reconsider, and upgrade to version 5.

        * include/makeinclude/platform_aix_vacpp.GNU: Deleted.

        * netsvcs/lib/TS_Clerk_Handler.h: Moved #include "ace/Connector.h"
          to be after #include "ace/SOCK_Connector.h" to fix compile error
          on AIX, Visual Age C++ 5.

        * ace/config-aix-4.x.h: Clarified comments that this file is for
          Visual Age C++ also. Added ACE_DLL_SUFFIX ".a" to match what
          is now generated from platform_aix_ibm.GNU.

        * bin/auto_compile:
        * bin/make_pretty.pl: Add detection of compile/link warnings and
          errors for AIX using the IBM compilers' code. Ignores the multiply
          defined symbol warnings from ld if it's an ACE symbol.

        * docs/ACE-development-process.html: Changed to link to Bugzilla so
          it works from anywhere.
